LEKCJA 5: Tworzenie Modeli

--- a/MyTasks/appsettings.json
+++ b/MyTasks/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MyTasks-680ED604-6CA4-4BBC-A388-8233B5B7E3B3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=MyTasks;User Id=login;Password=password;"
   },
   "Logging": {
     "LogLevel": {
